--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,12 @@
+recommandation:
+    resource: "@RecommandationBundle/Resources/config/routing.yml"
+    prefix:   /
+
+transversale:
+    resource: "@TransversaleBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
